--- a/Web ropa/style.css
+++ b/Web ropa/style.css
@@ -1,10 +1,11 @@
 * {
-  font-family: "Montserrat", sans-serif;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+
   font-size: 16px;
 }
 header {
-  position: sticky;
+  position: fixed;
+  background-color: white;
   width: 100%;
 }
 .navbar {
@@ -29,7 +30,7 @@ header {
   gap: 4rem;
 }
 .navbar-items li:hover {
-  transition: 0.5s;
+  transition: 0.25s;
   font-size: 18px;
   cursor: pointer;
   text-decoration: underline;
@@ -46,5 +47,69 @@ header {
 
 .nuevacoleccion-title {
   font-size: 32px;
+  padding: 1rem;
   padding-left: 2rem;
+}
+
+.grid-clothes {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  align-items: center;
+  gap:5rem;
+}
+
+.item{
+  text-align:center ;
+  justify-content: center;
+  
+  
+  
+}
+
+
+.grid-clothes img {
+  border-radius: 1rem;
+ 
+}
+.item:hover {
+  transition: 0.25s;
+  cursor: pointer;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.img-foot {
+  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.precio{
+  font-weight: bolder;
+}
+
+@media (max-width: 800px) {
+  .grid-clothes {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    justify-content: center;
+    align-items: center;}
+    .img-foot {
+      font-size: 14px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      padding: 1rem 4rem;
+    }
+    header {
+      position: fixed;
+      background-color: white;
+      width: 100%;
+    }
 }
