--- a/style.css
+++ b/style.css
@@ -5,39 +5,29 @@
   margin: 0;
 }
 header {
-  position: fixed;
-  z-index: 1;
+  position: sticky;
+  top: 0;
   background-color: white;
   width: 100%;
 }
-.grid-areas {
-  display: grid;
-  grid-template-areas: "header header " ".nuevacoleccion-title main " ;
-}
 
 .navbar {
-  padding-left: 2rem;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
   width: 100%;
   padding: 1rem;
   justify-content: space-between;
   border-bottom: 1px solid black;
 }
-.header {
-  grid-area: header;
-}
+
 .navbar-items {
   font-size: 16px;
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  text-align: center;
   gap: 4rem;
 }
 .fa-sharp{
@@ -63,25 +53,25 @@ header {
 .nuevacoleccion-title {
   font-size: 32px;
   padding: 5rem;
-  grid-area: ".nuevacoleccion-title";
+
 }
 
 .grid-clothes {
   display: grid;
   grid-template-columns: auto auto auto;
-  justify-content: center;
-  align-items: center;
   gap: 5rem;
-  grid-area: main;
+  margin: auto;
+  width: 1280px;
 }
 
-.item {
+.grid-clothes .item {
   text-align: center;
   justify-content: center;
 }
 
 .grid-clothes img {
   border-radius: 1rem;
+  
 }
 .item:hover {
   transition: 0.25s;
@@ -97,7 +87,7 @@ header {
   font-size: 14px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1rem;
 }
 
@@ -115,7 +105,6 @@ footer {
 footer ul{
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   font-size: 16px;
@@ -128,12 +117,11 @@ footer ul{
 footer i{
 color: #212429;
 background: white;
-padding: 1em;
-display: inline-block;
+padding-top: 1.25rem;
 text-align: center;
 vertical-align: middle;
-width: 25px;
-line-height: 30px;
+height: 20px;
+width: 50px;
 margin-right:0.70em;
 border-radius: 50%;
 }
