--- a/style.css
+++ b/style.css
@@ -64,11 +64,6 @@ header {
   width: 1280px;
 }
 
-.grid-clothes .item {
-  text-align: center;
-  justify-content: center;
-}
-
 .grid-clothes img {
   border-radius: 1rem;
   
@@ -129,10 +124,12 @@ border-radius: 50%;
 
 @media (max-width: 800px) {
   .grid-clothes {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    margin: auto;
+    gap: 3rem;
+
   }
   .img-foot {
     font-size: 14px;
@@ -143,6 +140,8 @@ border-radius: 50%;
   }
   .navbar {
     flex-direction: column;
+    position: sticky;
+    top: auto;
   }
   .navbar li{
     gap: 0;
@@ -152,7 +151,6 @@ border-radius: 50%;
     flex-direction: column;
     align-items: center;
     padding-bottom: 1rem;
-    
     gap: 0rem;
   }
   .navbar-icons{
