--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ header {
   position: sticky;
   top: 0;
   background-color: white;
-  width: 100%;
+  
 }
 
 .navbar {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%;
+  
   padding: 1rem;
   justify-content: space-between;
   border-bottom: 1px solid black;
@@ -30,6 +30,7 @@ header {
   align-items: center;
   gap: 4rem;
 }
+
 .fa-sharp{
  cursor: pointer;
 }
@@ -62,6 +63,7 @@ header {
   gap: 5rem;
   margin: auto;
   width: 1280px;
+  justify-content: center;
 }
 
 .grid-clothes img {
@@ -151,15 +153,10 @@ border-radius: 50%;
     margin:0%
   }
   .navbar-items{
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 1rem;
-    gap: 0rem;
+    display: none;
   }
   .navbar-icons{
-    justify-content: center;
-    align-items: center;
-    padding-right: 0%;
+    display: none;
   }
   .fa-sharp{
     padding-right: 95%;
@@ -168,12 +165,14 @@ border-radius: 50%;
 
    footer ul{
       flex-direction: column;
+      
       align-items: flex-start;
       
    }
    footer ul li{
     border-bottom: 1px solid white;
     padding-bottom: 1rem;
+    width:99%;
    }
 
 }
@@ -187,5 +186,6 @@ border-radius: 50%;
     justify-content: center;
     align-items: center;
     padding-right: 2rem;
+    
   }
 }
