--- a/style.css
+++ b/style.css
@@ -133,6 +133,11 @@ border-radius: 50%;
     gap: 3rem;
 
   }
+  .grid-clothes img{
+    position: relative;
+    z-index: 0;
+    
+  }
 
   .nuevacoleccion-title{
     padding: 1em;
@@ -144,9 +149,9 @@ border-radius: 50%;
     justify-content: space-around;
     padding: 1rem 4rem;
   }
-  .navbar {
-    flex-direction: column;
+  header {
     position: sticky;
+    z-index: 3;
   }
   .navbar li{
     gap: 0;
